# base

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDAApplication/: pythoneda.py
nix/: devShells.nix
pythonedaapplication/: bootstrap.py  pythoneda.py
