[tool.poetry]
name = "pythoneda-application-layer"
version = "0.0.1a1"
description = "Common classes for application layers of PythonEDA projects"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDAApplication"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "0.0.1a4"
pythoneda-infrastructure-layer = "0.0.1a1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
